--- a/source/_data/yun.yml
+++ b/source/_data/yun.yml
@@ -64,3 +64,19 @@ social:
     link: https://travellings.link
     icon: icon-train-line
     color: black
+
+
+# Sidebar Avatar
+avatar:
+  enable: true
+  url: /mm.png
+  # If true, the avatar would be dispalyed in circle.
+  rounded: true
+  # The value of opacity should be choose from 0 to 1 to set the opacity of the avatar.
+  opacity: 1
+  mickey_mouse: false
+  status:
+    enable: false
+    emoji: 😊
+    message: 究极无敌人中人
+
