:pencil: update content

--- a/source/_data/yun.yml
+++ b/source/_data/yun.yml
@@ -63,7 +63,7 @@ social:
   - name: Travelling
     link: https://travellings.link
     icon: icon-train-line
-    color: white
+    color: black
 
 
 # Sidebar Avatar
